[metadata]
name = conveyorcaaclient
version = 2016.1
summary = Conveyor connect cloud service client
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/


[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    conveyorcaaclient
 